<resources>    <string name="app_name">UAVOS</string>    <string name="title_activity_demo">UAVOSActivity</string>    <string name="disconnected">Disconnected</string>    <string name="product_information">Product Information</string>    <string name="connection_loose">Status: No Product Connected</string>    <string name="sdk_version">DJI SDK Version: 4.2.1</string>    <!-- 一般 -->    <string name="cancel">取 消</string>    <string name="delate_waypoint">删除航点</string>    <string name="delate_boundary">删除边界点</string>    <string name="go_back">返 回</string>    <!-- 欢迎界面 -->    <string name="welcome_text_about_company">北京森馥科技股份有限公司 ©copyright 2017-2027 STT,All rights reserved</string>    <string name="welcome_btn_entry">点击进入</string>    <string name="welcome_btn_more">更 多</string>    <!-- 主界面 -->    <string name="home_btn_map">地 图</string>    <string name="home_btn_video">视 频</string>    <string name="home_btn_data">数 据</string>    <!-- 新建任务相关 -->    <string name="home_task_create_name">任务名称</string>    <string name="home_task_create">新建任务</string>    <string name="uav_mode_sudden_stop">急 停</string>    <string name="home_task_create_new">新建监测任务</string>    <string name="uav_mode_vertical_hover">垂直分布模式（悬停）</string>    <string name="uav_mode_vertical_move">垂直分布模式（移动）</string>    <string name="uav_node_surround_hover">定点环绕模式（悬停）</string>    <string name="uav_mode_surround_move">定点环绕模式（移动）</string>    <string name="uav_mode_point_flight">航点飞行</string>    <string name="uav_mode_space_exploration">空间探测</string>    <string name="uav_mode_scan">扫描模式</string>    <string name="uav_mode_remote_control">遥控模式</string>    <string name="uav_parameter_lng">经度</string>    <string name="uav_parameter_lat">纬度</string>    <string name="uav_parameter_set_base_point">设置基点</string>    <string name="uav_parameter_set_waypoint">添加航点</string>    <string name="uav_parameter_set_boundary">添加边界点</string>    <string name="uav_get_position">获取无人机位置</string>    <string name="uav_parameter_start_height">起 始 高 度</string>    <string name="uav_parameter_height_interval">高 度 间 隔</string>    <string name="uav_parameter_monitor_points">监 测 点 数</string>    <string name="uav_parameter_single_monitor_time">单点监测时间</string>    <string name="uav_parameter_scan_interval">扫描间距</string>    <string name="uav_parameter_generate_route">生 成 航 线</string>    <string name="uav_take_off">起 飞</string>    <string name="uav_parameter_monitor_height">监 测 高 度</string>    <string name="uav_parameter_monitor_speed">监测飞行速度</string>    <string name="uav_parameter_speed_height">飞 行 高 度</string>    <string name="uav_parameter_surround_radius">环 绕 半 径</string>    <string name="uav_parameter_add_point">添加航点</string>    <string name="uav_parameter_delete_point">删除航点</string>    <string name="uav_parameter_cancel_point">取消航点</string>    <string name="uav_parameter_set_boundary_point">设定边界点</string>    <string name="uav_parameter_cancel_boundary_point">取消边界点</string></resources>