<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_right"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin_6">

    <Button
        android:id="@+id/btn_pattern_back"
        android:layout_width="@dimen/btn_min_width"
        android:layout_height="@dimen/activity_margin_30"
        android:background="@drawable/selector_btn_bg"
        android:text="@string/go_back"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_pattern_back"
        android:layout_marginTop="@dimen/activity_margin_10"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/home_task_create_new"
            android:textColor="@color/home_fg_blue"
            android:textSize="@dimen/text_size_12"/>

        <Button
            android:id="@+id/btn_ver_hover"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_vertical_hover"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_ver_move"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_vertical_move"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_surround_hover"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_node_surround_hover"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_surround_move"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_surround_move"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_point_flight"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_point_flight"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_space_exploration"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_space_exploration"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_scan"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/btn_remote_control"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/activity_margin_30"
            android:layout_marginTop="@dimen/activity_margin_10"
            android:background="@drawable/selector_btn_bg"
            android:paddingBottom="@dimen/activity_margin_8"
            android:paddingTop="@dimen/activity_margin_8"
            android:text="@string/uav_mode_remote_control"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

    </LinearLayout>

</RelativeLayout>