<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_mode_waypoint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/home_right"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/activity_margin_6">
        <!-- 航点模式：wp -->
        <Button
            android:id="@+id/btn_wp_back"
            android:layout_width="@dimen/btn_min_width"
            android:layout_height="@dimen/activity_margin_30"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/go_back"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btn_wp_back"
            android:layout_marginTop="@dimen/activity_margin_15"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uav_parameter_lng"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <EditText
                    android:id="@+id/et_wp_lat"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="2"
                    android:background="@drawable/selector_edittext_bg"
                    android:lines="1"
                    android:paddingLeft="@dimen/activity_margin_6"
                    android:paddingRight="@dimen/activity_margin_6"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <Button
                    android:id="@+id/btn_wp_set_point"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_weight="2"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/uav_parameter_set_waypoint"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/activity_margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uav_parameter_lat"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <EditText
                    android:id="@+id/et_wp_lng"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="2"
                    android:background="@drawable/selector_edittext_bg"
                    android:lines="1"
                    android:paddingLeft="@dimen/activity_margin_6"
                    android:paddingRight="@dimen/activity_margin_6"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <Button
                    android:id="@+id/btn_wp_cancel"
                    android:layout_width="0dp"
                    android:layout_height="31dp"
                    android:layout_weight="1.93"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/delate_waypoint"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_wp_get_plane"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_weight="4"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/uav_get_position"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uav_parameter_speed_height"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <EditText
                    android:id="@+id/et_wp_start_height"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_weight="2"
                    android:background="@drawable/selector_edittext_bg"
                    android:lines="1"
                    android:paddingLeft="@dimen/activity_margin_6"
                    android:paddingRight="@dimen/activity_margin_6"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uav_parameter_single_monitor_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <EditText
                    android:id="@+id/et_wp_time"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_weight="2"
                    android:background="@drawable/selector_edittext_bg"
                    android:lines="1"
                    android:paddingLeft="@dimen/activity_margin_6"
                    android:paddingRight="@dimen/activity_margin_6"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>



            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uav_parameter_single_monitor_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_weight="2"
                    android:background="@drawable/selector_edittext_bg"
                    android:lines="1"
                    android:paddingLeft="@dimen/activity_margin_6"
                    android:paddingRight="@dimen/activity_margin_6"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_15"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_wp_generate_route"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_marginRight="@dimen/activity_margin_6"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/uav_parameter_generate_route"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />

                <Button
                    android:id="@+id/btn_wp_take_off"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_margin_30"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/uav_take_off"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
